syntax = "proto3";
import "google/api/annotations.proto";

package gron;
option go_package = "../pb;pb";


service Gron {
  rpc CreateTimer (CreateTimerRequest) returns (CreateTimerResp){
    option (google.api.http) = {
      post: "/gron/create_timer",
      body: "*"
    };
  };
  rpc EnableTimer (EnableTimerRequest) returns (EnableTimerResp){
    option (google.api.http) = {
      post: "/gron/enable_timer",
      body: "*"
    };
  };
}

message CreateTimerRequest{
  string app = 1;
  string name = 2;
  int32 status = 3;
  string cron =4 ;
  NotifyHTTPParam notifyHTTPParam = 5;
}

message NotifyHTTPParam{
  string method = 1;
  string url = 2;
  map<string,string> header = 3;
  string body = 4;
}

message CreateTimerResp {
  int32 code = 1;
  string message = 2;
  CreateTimerRespData data =3;
}

message CreateTimerRespData {
  int64 timerId = 1;
}

message EnableTimerRequest{
  string app = 1;
  int64  timerId = 2;
}

message EnableTimerResp {
  int32 code = 1;
  string message = 2;
}